tests/snapshots/examples_fixtures/type_system__failing__130_do_missing_brace.snap
---
source: tests/examples_fixtures_snapshots.rs
assertion_line: 21
---
Fixture: examples/type_system/failing/130_do_missing_brace.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E034]: UNEXPECTED TOKEN

Expected `{` to begin the `do` block.

  --> examples/type_system/failing/130_do_missing_brace.flx:1:12
  |
1 | let y = do x + 1
  |            ^

Hint:
  Flux requires braces: `do { ... }`
== stdout ==
<not executed>
